Путь в api к обновлению информации о пользователе приведен к более правильному виду
